<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FWD3</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_status">Download Status</string>
    <string name="channel_id">download_channel</string>
    <string name="channel_name">download_channel_n</string>
    <string name="file_name">File name:</string>
    <string name="download_completed">Download Completed</string>
    <string name="no_selection"> Please Choose one od the links to download </string>


    <string name="download_using_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_using_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="download_using_refrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_text_start_bt" >Download </string>
    <string name="download_text_progress_bt" >We are Loading </string>
    <string name="detail_ok_bt" >OK </string>

    <string name="file_status">File Status: </string>
    <string name="not_mentioned">not mentioned</string>

</resources>
