<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/motionLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.DetailActivity"
    app:layoutDescription="@xml/content_detail_scene"
    tools:showIn="@layout/activity_detail">

    <Button
        android:id="@+id/button_back_to_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@color/colorPrimary"
        android:text="@string/detail_ok_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_detail_fileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/not_mentioned"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/tv_detail_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/not_mentioned"
        android:textSize="@dimen/default_text_size"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="75dp" />

    <TextView
        android:id="@+id/textView_detail_nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/textView_detail_statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_status"
        android:textSize="@dimen/default_text_size"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="148dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>